add filter and sorting to backend
