# backend/infrastructure/src/persistence/entity/task.rs
@@ -1,3 +1,4 @@
+use chrono::Utc;
 use sea_orm::prelude::*;
 
 #[derive(Clone, Debug, PartialEq, DeriveEntityModel, Default)]
@@ -7,6 +8,8 @@ pub struct Model {
     pub id: i64,
     pub title: String,
     pub done: bool,
+    pub created_at: chrono::DateTime<Utc>,
+    pub updated_at: chrono::DateTime<Utc>,
 }
 #[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
 pub enum Relation {}
